improvements in all classes